--- a/app_public/angular.json
+++ b/app_public/angular.json
@@ -89,8 +89,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstap.min.css",
-              "./node_modules/bulma/css/bulma.css",
+              "../node_modules/bulma/css/bulma.css",
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
             ],
