--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "filepond": "^4.20.1",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "mongo": "^0.1.0",
     "mongoose": "^5.10.0",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "serve-favicon": "^2.5.0"
   }
