--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-    MONGO_URL='mongodb+srv://jijiga:LBRJyxCR0cC3j9qk@cluster0.5qjo6.mongodb.net/petcustomers?retryWrites=true&w=majority'
+    MONGO_URL='mongodb+srv://jijiga:zL02UkMvM3MMrjQu@cluster0.5qjo6.mongodb.net/petcustomers?retryWrites=true&w=majority'
