--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": ">=11.0.0",
+    "npm": ">=6.4.0"
+  },
   "dependencies": {
     "audit": "0.0.6",
     "body-parser": "^1.19.0",
